# storylock-skill

./: .gitignore
docs/: readme-cn.md  readme.md
src/host/windows-host/: Cargo.toml  README.md  start-yian-windows-host.cmd
src/host/windows-host/assets/: question-bank.json
src/host/windows-host/assets/story-drafts/: dongguo-and-judging-neighbor-zh.json  emperor-new-clothes-en.json  kongrong-shares-pears-en.json  manifest.json  shouzhudaitu-zh.json  zhizi-yilin-zh.json
src/host/windows-host/assets/story-template-directories/: README.md  manifest.json
src/host/windows-host/assets/story-template-directories/emperor-new-clothes-en/: README.md  story-template.json
src/host/windows-host/installer/: product.wxs
src/host/windows-host/scripts/: extract-storylock-callbacks.ps1  extract-storylock-core-data.ps1  extract-storylock-editor-flow.ps1  extract-storylock-helpers.ps1  extract-storylock-resource-export.ps1  move-slint-ui-to-mod.ps1  move-storylock-to-mod.ps1  refactor-slint-ui-storylock.ps1  split-main-io-and-ui.ps1  split-main-runtime.ps1  split-slint-ui.ps1
src/host/windows-host/src/: main.rs  slint_ui.rs  tray_ui.rs
src/host/windows-host/src/host_runtime/: mod.rs
src/host/windows-host/src/slint_ui/: common.slint  confirmation.rs  dashboard.rs  host_dashboard.slint  mod.rs  puzzle_adapter.rs  request_confirmation.slint  storylock_core.slint
src/host/windows-host/src/tests/: authorization.rs  execution.rs  mod.rs  question_bank.rs  story_templates.rs  ui_status.rs
src/host/windows-host/tools/ui-doc-screenshots/: README.md  capture_storylock_ui.ps1
(+610 files in other folders)
