[package]
name = "yian-windows-host"
version = "0.1.0"
edition = "2021"
description = "Windows local host skeleton for Yian / StoryLock"
license = "UNLICENSED"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
slint = { version = "1.16.1", optional = true, default-features = false, features = ["backend-winit", "compat-1-2", "renderer-software", "std"] }
tiny_http = "0.12"
uuid = { version = "1.11", features = ["v4"] }
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Security_Cryptography",
  "Win32_System_DataExchange",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[features]
default = []
ui-tray = []
ui-slint = ["dep:slint"]
